1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* collections.h: Updated documentation tags.
	(BucketFunction): -getBucketFunction now returns bucket_t.
	(CompareFunction): -getCompareFunction now returns compare_t.

1998-06-01  Alex Lancaster  <alex@santafe.edu>

	* collections.h (Collection): Added method -setIndexFromMemberLoc:
	to protocol.
	(Index): Added doc string (//G) to Symbol and Error global
	variables - made these inside the @end protocol declaration for
	Index.
	(KeyedCollection): Added method -createIndex:fromMember: to
	protocol.
	
	* collections.m (LiteralString): Redefine LiteralString as
	LiteralString_ between the imports of collections.xm and
	Collection.h to avoid redeclaration error.

1998-06-01  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* collections.m: Put LiteralString global here.

	* collections.h: Make LiteralString a @class.

1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* collections.h (IndexSafety, Offsets, ForEach, DefaultMember,
	MemberBlock, Array, EndsOnly, DupOption, Sorted, CompareFunction,
	BucketFunction, PartiallyOrdered, PartialOrderContext, MapIndex,
	InputStream): Add //S.

	* Set.m ([Set_c -at:memberSlot:]): Return NO, not nil.
	
	* collections.h	(Index, ListIndex, Stack, Queue, PartialOrderRelations,
	Set, MapIndex): Add phase tags.

1998-05-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* collections.h: Remove NextPrev from Index protocol.  Tweak
	comments for the sake of documentation processing.

1998-04-30  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Set.[hm] ([Set_c -createIndex:fromMember:]): Rename from
	createIndexIn:fromMember:.  Raise a NotImplemented event.

	* ListGen.m: Adjust error message to be createIndex:fromMember
	not createIndexIn:fromMember.

	* collections.h: Augment the Index documentation.  Move the
	existing Index info to the Collections protocol, as it is
	a bit more general.

1998-04-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
